--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "minimum-stability": "dev",
   "require": {
-    "illuminate/support": "~8.0",
+    "laravel/framework": "~7.0|~8.0",
     "davidnadejdin/alfabank-php-client": "dev-main"
   },
   "extra": {
