--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "laravel/framework": "~5.0|~6.0|~7.0|~8.0",
+    "laravel/framework": "~5.0|~6.0|~7.0|~8.0|~9.0",
     "davidnadejdin/alfabank-php-client": "^1"
   },
   "extra": {
